--- a/hotel-booking/src/index.css
+++ b/hotel-booking/src/index.css
@@ -1,5 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Outfit:wght@100..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 
 @import "tailwindcss";
 
@@ -9,7 +11,7 @@
 }
 
 *{
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Outfit;
 }
 
 .font-playfair{
